[package]
name = "KlyR"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of KLYNTAR core"
readme = "README.md"
repository="https://github.com/KLYN74R/KlyR"
lisence="MIT"
authors = ["Vlad Chernenko vladchernenko@protonmail.com"]
keywords = ["crypto", "exolorer", "klyntar"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[dependencies]
serde_json = "1.0.81"
hyper = "0.14.18"


[features]
# Nothing by default
default = []


#[[test]]
