[package]
name = "KlyR"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of KLYNTAR core"
readme = "README.md"
repository="https://github.com/KLYN74R/KlyR"
lisence="Apache-2.0"
authors = ["Vlad Chernenko vladchernenko@protonmail.com"]
keywords = ["crypto", "exolorer", "klyntar"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[dependencies]
serde_json = "1.0.81"
hyper = "0.14.18"


[features]
# Nothing by default
default = []


#[[test]]



############################## OPTIMIZATION STUFF ##############################

# +Use RUSTFLAGS="-C target-cpu=native"

[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

[profile.release.package."*"]
#lto=true
codegen-units=1
incremental=true
strip=true

# No build scripts, proc macros, and their dependencies,so no more options need